# whisper-server

./: .gitignore  Cargo.toml
projects/whisper-server/: Cargo.toml
projects/whisper-server/src/: main.rs
