[package]
name = "whisper-server"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/RustTemplate"
repository = "https://github.com/oovm/RustTemplate"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
anyhow = "1.0.86"
hf-hub = "0.3.2"
candle-core = "0.6.0"
candle-nn = "0.6.0"
candle-transformers = "0.6.0"
symphonia = { version = "0.5.4", features = ["opt-simd", "opt-simd-avx", "opt-simd-sse", "opt-simd-neon"]}

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
